# tutorials

envoy-wasm-filter/: Cargo.toml  Makefile  docker-compose.yaml  envoy.yaml
envoy-wasm-filter/src/: lib.rs
ingestion-service/: Dockerfile  go.mod  ingestion-service.yaml  main.go
nimbus/: .gitignore  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
nimbus/api/v1alpha1/: groupversion_info.go  nimbuspolicy_types.go  securityintent_types.go  securityintentbinding_types.go  zz_generated.deepcopy.go
nimbus/cmd/: main.go
nimbus/config/crd/: kustomization.yaml
nimbus/config/default/: kustomization.yaml  metrics_service.yaml
nimbus/config/manager/: manager.yaml
nimbus/config/prometheus/: monitor.yaml
nimbus/config/rbac/: kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  nimbuspolicy_editor_role.yaml  nimbuspolicy_viewer_role.yaml  role.yaml  role_binding.yaml  securityintent_editor_role.yaml  securityintent_viewer_role.yaml  securityintentbinding_editor_role.yaml  securityintentbinding_viewer_role.yaml  service_account.yaml
nimbus/config/samples/: intent_v1alpha1_nimbuspolicy.yaml  intent_v1alpha1_securityintent.yaml  intent_v1alpha1_securityintentbinding.yaml  kustomization.yaml
nimbus/deployment/nimbus/: Chart.yaml  Readme.md  values.yaml
nimbus/deployment/nimbus-kubearmor/: Chart.yaml  Readme.md  values.yaml
nimbus/examples/: pkg-mgrs-intent-and-binding.yaml
nimbus/internal/controller/: consts.go  securityintent_controller.go  securityintent_controller_test.go  suite_test.go  (+2 more)
nimbus/test/: chainsaw-config.yaml
(+60 files in other folders)
